--- a/TODO
+++ b/TODO
@@ -1,23 +1,36 @@
-1) отражение
+1) Продвинутый файл сцены (а-ля XML) и парсер для него
 
-2) прозрачность
+2) Ambience освещение и возможность задать его из файла
 
-3) преломление
+3) Ограниченные базовые объекты
 
-4) сглаживание
+4) Искажения изображения (шум?) - color disruption
 
-5) многопоточность
+5) Блики, засветы на камере от света, направленного на камеру
 
-6) ограниченные фигуры
+6) Направленное (параллельное?) освещение
 
-7) сложные фигуры (торы и прочее)
+7) Отражение, прозрачность, преломление, изменение затенения прозрачных объектов (декартова формула прозрачности)
 
-8) парсер карт
+8) Текстуры (растягивание, сжатие, смещение) на более чем 4 объекта
 
-9) bump maping and color disrupt (хз что это)
+9) Карта нормалей для текстур (неровность поверхностей), частичная прозрачность, границы объектов через текстуры
 
-10) текстуры
+10) Составные объекты - куб, стакан из конуса, цилиндра и сферы, их вращение и движение, множество объектов на сцене
 
-11) движение/вращение объектов
+11) Деформирование объектов и вычитание объектов (дыры в плоскотях и т.п.) с помощью "отрицательных" объектов
 
-12)
+12) Гиперболоиды и параболоиды
+
+13) Классические эффекты - сглаживание, эффект мультфильма, размытость, сепия, другие фильтры, стереоскопия
+
+14) Многопоточность, расчеты на множестве компьютеров, быстрый рендеринг, сохранение картинок (встроенный скриншот)
+
+15) Интерфейс - возможность варьировать параметры сцены без их немедленного изменения + кнопка принять изменения,
+добавление и удаление объектов и источников света, их перемещение
+
+16) Сложные объекты - тор, скатерть, куб с отверстиями, прочие сложные объекты (до 5 для макс бонуса)
+
+17) Прочее - видео с помощью программы РТ, файлы моделей, окулус рифт
+
+18) Лента мебиуса
