--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1) Продвинутый файл сцены (а-ля XML) и парсер для него
+1) Продвинутый файл сцены (а-ля XML) и парсер для него // eloren-l
 
 2) Ambience освещение и возможность задать его из файла
 
@@ -12,9 +12,9 @@
 
 7) Отражение, прозрачность, преломление, изменение затенения прозрачных объектов (декартова формула прозрачности)
 
-8) Текстуры (растягивание, сжатие, смещение) на более чем 4 объекта
+8) Текстуры (растягивание, сжатие, смещение) на более чем 4 объекта // eloren-l
 
-9) Карта нормалей для текстур (неровность поверхностей), частичная прозрачность, границы объектов через текстуры
+9) Карта нормалей для текстур (неровность поверхностей), частичная прозрачность, границы объектов через текстуры // eloren-l
 
 10) Составные объекты - куб, стакан из конуса, цилиндра и сферы, их вращение и движение, множество объектов на сцене
 
