--- a/TODO
+++ b/TODO
@@ -6,11 +6,11 @@
 
 4) Искажения изображения (шум?) - color disruption
 
-5) Блики, засветы на камере от света, направленного на камеру
+5) Блики, засветы на камере от света, направленного на камеру // cschuste?
 
 6) Направленное (параллельное?) освещение
 
-7) Отражение, прозрачность, преломление, изменение затенения прозрачных объектов (декартова формула прозрачности)
+7) Отражение, прозрачность, преломление, изменение затенения прозрачных объектов (декартова формула прозрачности) // cschuste
 
 8) Текстуры (растягивание, сжатие, смещение) на более чем 4 объекта // eloren-l
 
