proper camera movements

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 1) Продвинутый файл сцены (а-ля XML) и парсер для него // eloren-l
 
-2) Ambience освещение и возможность задать его из файла
+DONE 2) Ambience освещение и возможность задать его из файла
 
 3) Ограниченные базовые объекты
 
@@ -8,9 +8,9 @@
 
 5) Блики, засветы на камере от света, направленного на камеру // cschuste?
 
-6) Направленное (параллельное?) освещение
+DONE 6) Направленное (параллельное?) освещение
 
-7) Отражение, прозрачность, преломление, изменение затенения прозрачных объектов (декартова формула прозрачности) // cschuste
+7) Отражение(DONE), преломление-прозрачность, изменение затенения прозрачных объектов (декартова формула прозрачности) // cschuste
 
 8) Текстуры (растягивание, сжатие, смещение) на более чем 4 объекта // eloren-l
 
